<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiniVerse</string>
    
    <string name="title_home">Home</string>
    <string name="title_games">Games</string>
    <string name="title_installed">Installed</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    
    <string name="search_hint">Search games...</string>
    <string name="play_now">Play Now</string>
    <string name="download">Download</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="offline_mode">Offline</string>
    <string name="error_download">Download failed. Please try again.</string>
    <string name="no_games_found">No games found.</string>
    <string name="loading">Loading...</string>
    
    <string name="category_all">All</string>
    <string name="category_action">Action</string>
    <string name="category_puzzle">Puzzle</string>
    <string name="category_arcade">Arcade</string>
    <string name="category_racing">Racing</string>
</resources>
